--- a/.github/workflows/update_s3.yml
+++ b/.github/workflows/update_s3.yml
@@ -1,33 +1,33 @@
-name: Update S3 Pages
+# name: Update S3 Pages
 
-on:
-  schedule:
-    - cron: '* * * * *'  # Runs every hour on the hour
-  workflow_dispatch:      # Allows manual trigger in GitHub
+# on:
+#   schedule:
+#     - cron: '* * * * *'  # Runs every hour on the hour
+#   workflow_dispatch:      # Allows manual trigger in GitHub
 
-jobs:
-  update-s3-job:
-    runs-on: ubuntu-latest
+# jobs:
+#   update-s3-job:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '14'
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Run Puppeteer script
-        env:
-          MY_AWS_REGION: ${{ secrets.MY_AWS_REGION }}
-          MY_AWS_ACCESS_KEY: ${{ secrets.MY_AWS_ACCESS_KEY }}
-          MY_AWS_SECRET_ACCESS_KEY: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-          BASE_URL: ${{ secrets.BASE_URL }}
-          BASE_API_URL: ${{ secrets.BASE_API_URL }}
-          TENANT_ID: ${{ secrets.TENANT_ID }}
-        run: node src/s3_update.js
+#       - name: Run Puppeteer script
+#         env:
+#           MY_AWS_REGION: ${{ secrets.MY_AWS_REGION }}
+#           MY_AWS_ACCESS_KEY: ${{ secrets.MY_AWS_ACCESS_KEY }}
+#           MY_AWS_SECRET_ACCESS_KEY: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+#           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+#           BASE_URL: ${{ secrets.BASE_URL }}
+#           BASE_API_URL: ${{ secrets.BASE_API_URL }}
+#           TENANT_ID: ${{ secrets.TENANT_ID }}
+#         run: node src/s3_update.js
